# Agentloom

./: .env.example  .gitignore  Makefile  README.en.md  README.md  docker-compose.yml
agentloom_bench/: README.md  pyproject.toml
agentloom_bench/src/agentloom_bench/: __init__.py  cli.py
agentloom_bench/src/agentloom_bench/tau_bench/: __init__.py  adapter.py  client.py  report.py  reward.py  runner.py
agentloom_bench/tests/smoke/: test_import.py
agentloom_bench/tests/unit/: test_batch_aggregator.py  test_cli_parsing.py  test_client.py  test_report.py  test_reward.py  test_runner.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/agentloom/: __init__.py  main.py  tenancy_runtime.py
backend/agentloom/api/: chatflows.py  folders.py  health.py  mcp_servers.py  providers.py  tools.py  workflows.py  workspace_settings.py
backend/agentloom/benchmarks/: __init__.py
backend/agentloom/benchmarks/tau_bench/: __init__.py  api.py  runtime.py  tool_source.py
backend/agentloom/channels/: __init__.py  base.py
backend/agentloom/config/: __init__.py
backend/agentloom/db/: __init__.py  base.py
backend/agentloom/engine/: __init__.py  brief_parser.py  chatflow_engine.py  events.py  judge_formatter.py  judge_parser.py  keyframe_validator.py  model_resolution.py  plan_output_parser.py  provider_context_cache.py  rate_limit.py  recursive_planner_parser.py  workflow_engine.py
backend/agentloom/mcp/: __init__.py  bridge.py  client.py  runtime.py  tool_adapter.py  types.py
backend/agentloom/providers/: __init__.py  anthropic_native.py  base.py  openai_compat.py  registry.py  types.py
backend/agentloom/rate_limit/: __init__.py  defaults.yaml  htb.py
backend/agentloom/schemas/: __init__.py  chatflow.py  common.py  provider.py  workflow.py  workspace_settings.py
backend/agentloom/templates/: __init__.py  instantiate.py  loader.py
backend/agentloom/tools/: __init__.py  base.py  bash.py  files.py  memoryboard_lookup.py  node_context.py  registry.py  search.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_folders.py  0003_folder_nesting.py  0004_chatflow_description_tags.py  0005_workflow_templates_builtin_id.py  0006_seed_builtin_workspace.py  0007_mcp_servers.py  0008_workspace_payload.py  0009_provider_sub_kind_backfill.py  0010_node_index.py  0011_execution_mode_rename.py  0012_memoryboard_brief.py  0013_board_items_retrieval.py  0014_layer2_enum_rename.py  0015_fixture_builtin_id_rename.py  0016_wipe_legacy_chatflows.py  0017_drop_board_items_forget_counter.py  0018_board_items_drill_down.py  0019_board_items_tag_indices.py  0020_workflow_capabilities_rename.py
backend/scripts/: inspect_workflow.py  seed_glm_provider.py  seed_tavily_mcp.py  seed_volcengine_provider.py
docs/: design-memoryboard-brief.md  (+4 more)
(+141 files in other folders)
